# Zadanie_techniczne

./: CMakeLists.txt  Dockerfile  Readme.md
include/: converter.hpp  number_proccessor.hpp  validator.hpp
src/: converter.cpp  main.cpp  number_proccessor.cpp  validator.cpp
test/: main_tests.cpp
